# kurs_worck_3

./: .coverage  .gitignore  README.md  pyproject.toml  requirements.txt
kurs_worck_3/: app.py  operation.py
tests/: operation_tests.py
